fixed mobile container grid alignment

--- a/react-app/src/components/authenticated/SingleBusiness/SingleBusiness.css
+++ b/react-app/src/components/authenticated/SingleBusiness/SingleBusiness.css
@@ -104,7 +104,7 @@
         display: grid;
         grid-template-columns: none;
         grid-template-rows: 1fr 1fr;
-        width: 69%;
+        width: 90%;
         margin-top: 50px;
         margin-left: auto;
         margin-right: auto;
@@ -148,7 +148,23 @@
         padding: 20px !important;
     }
 
+    .upload-form-photo {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+    }
+
+    .roll-more {
+        align-items: center;
+        padding-right: 0px !important;
+    }
+
+    .file-button {
+        margin-right: 0px !important;
+    }
+
     .file-upload-button {
-        padding: 0px 8px !important;
+        padding: 10px 8px !important;
     }
   }
